# argo-energy-solutions

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  ACTION_PLAN_NEXT_2_WEEKS.md  CHANGELOG.md  CLAUDE.md  DATA_FOUNDATION_PLAN.md  Dockerfile.backend  Dockerfile.frontend  PRIORITY_MATRIX.md  QUICK_START.md  README.md  REORGANIZATION_COMPLETE.md  SUPPORT_TICKET_RESPONSE.md  docker-compose.yml  mkdocs.yml  package-lock.json  package.json  render.yaml  vite.config.ts
backend/python_scripts/: pyproject.toml  requirements.txt
backend/python_scripts/analytics/: __init__.py  generate_site_profile.py  profile_data_health.py
backend/python_scripts/analyze/: __init__.py  cost_model.py  electrical_health.py  forecast.py  query_energy_data.py
backend/python_scripts/config/: __init__.py  report_config.py
backend/python_scripts/deliver/: export_for_tableau.py  generate_asset_health_report.py  generate_customer_report.py  generate_electrical_health_report.py  generate_weekly_report.py
backend/python_scripts/govern/: add_electrical_health_columns.py  add_meters_table.py  check_completeness.py  create_sites_table.py  data_quality_report.py  validate_data.py
backend/python_scripts/ingest/: debug_raw_fetch.py  diagnostic_report.py  discover_api_endpoints.py  discover_hierarchy.py  historical_ingestion.py  ingest_to_postgres.py  inspect_channels.py  inspect_device.py  test_auth_approaches.py  test_exact_curl.py  test_fixed_readings.py  test_historical_formats.py  test_raw_readings.py  test_readings_variations.py  test_single_channel_ingest.py  test_working_auth.py
(+70 files in other folders)
